--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,5 +9,28 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <body>
     !!! HELLO WORLD !!!
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8" align="center" id="map_viz1"
+                style="align-items: stretch;"></div>
+            <div class="col-md-4" align="center" id="map_lat1"
+                style="align-items: stretch;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12"></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </body>
+<script>
+var 
+</script>
 </html>
