--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -91,128 +91,24 @@ text{
     color:white;
 }
 
-#metric-modal .metric-chart text {
-	fill: #565656;
-	font-size: 9px;
-	font-family: Helvetica, Arial, "sans serif";
-}
-
-#metric-modal .metric-chart text.no-data {
-	font-size: 16px;
-	font-weight: 100;
-	fill:#d0d0d0;
-}
-
-#metric-modal .metric-chart rect.no-data {
-	fill: #f5f5f5;
-}
-
-/* When there is data ...*/
-
-/* CB: padding to display better on bl.ocks.org */
-#metric-modal {
-	padding: 64px;
-}
-
-#metric-modal .metric-chart rect.plot-background{
-	fill: white;
-}
-
-#metric-modal .metric-chart path.line {
-	fill: none;
-	stroke: #00AA8D; /* default, changed in each theme */
-	stroke-width: 1.5px;
-	clip-path: url(#clip);
-}
-
-#metric-modal .metric-chart path.area {
-	fill: #00AA8D; /* CB default, changed in each theme */
-	opacity: 0.6;
-	clip-path: url(#clip);
-}
-
-#metric-modal .metric-chart .axis {
-	shape-rendering: crispEdges;
-}
-
-#metric-modal .metric-chart .x.axis .domain{
-	display:none;
-}
-
-#metric-modal .metric-chart .x.axis line {
-	stroke: white;
-	opacity: 0.4;
-}
-
-#metric-modal .metric-chart .context .x.axis line {
-	display: none;
-}
-
-#metric-modal .metric-chart .y.axis .domain{
-	display: none;
-}
-
-#metric-modal .metric-chart .y.axis.title{
-	font-size: 13px;
-	font-weight: 100;
-}
-
-#metric-modal .metric-chart .y.axis line {
-	stroke: #565656;
-	stroke-dasharray: 2,2;
-	stroke-opacity: 0.3;
-}
-
-#metric-modal .metric-chart .brush .extent {
-  fill-opacity: .07;
-  shape-rendering: crispEdges;
-  clip-path: url(#clip);
-}
-
-#metric-modal .metric-chart rect.pane {
-	cursor: move;
-	fill: none;
-	pointer-events: all;
-}
-/* brush handles  */
-#metric-modal .metric-chart .resize .handle {
-	fill: #555;
-}
-
-#metric-modal .metric-chart .resize .handle-mini {
-	fill: white;
-    stroke-width: 1px;
-    stroke: #555;
-}
-
-#metric-modal .metric-chart .scale_button {
-	cursor: pointer;
-}
-
-#metric-modal .metric-chart .scale_button rect {
-	fill: #eaeaea;
-}
-#metric-modal .metric-chart .scale_button:hover text {
-	fill: #417DD6;
-	transition: all 0.1s cubic-bezier(.25,.8,.25,1);
-}
-
-#metric-modal .metric-chart text#displayDates  {
-	font-weight: bold;
-}
-
-
 </style>
   
 <body>
     <div class="container">
-        <div class="row">
+        <div class="jumbotron" style="padding-top: 10px;padding-bottom: 10px;">
+            <h4 style="text-align: center;">Project for CSE 564: Visualization and Visual Analytics | INVESTIGATING COVID19</h4>
+            <marquee>    Created by: 
+                <a href="">Harshit </a> and
+                <a href="">Siva</a>
+            </marquee>
+        </div>
+        <!-- <div class="row">
             <p class="col-md-4">Project for CSE 564: Visualization and Visual Analytics</p>
             <p class="col-md-4">INVESTIGATING COVID19</p>
             <p class="col-md-4">Designed By: Siva and Harshit</p>
-        </div>
+        </div> -->
         <div class="row form-group">
-            <label class="col-md-4" align="left" for="stats">Select Stats to Display</label>
+            <label class="col-md-4" align="left" for="stats">Select Stats to Display </label>
             <select class="col-md-3 btn btn-secondary"
                 data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false" id="stats" onChange="update()">
@@ -226,10 +122,13 @@ text{
                 style="align-items: stretch;"></div>
             <div class="col-md-4" align="center"
                 style="align-items: stretch;">
-                <label align="center" id="country_name"></label>
+                <label align="center" id="country_name">[Click on Country to show Time Series]</label>
                 <div id="map_lat1"></div>
             </div>
-
+        </div>
+        <div class="row">
+            <div class="col-md-8" id="parallel"></div>
+            <div class="col-md-4" id="country_info"></div>
         </div>
     </div>
 
@@ -328,7 +227,7 @@ function ready(data, value, size, dom) {
             }).on("click", function(d) {
                 country = d.properties.name;
                 d3.select("#country_name").text(function() {
-                    return country;
+                    return country + " [# Cases]";
                 });
                 update1(country);
             });
@@ -390,7 +289,7 @@ function ready1(data, value, size, dom) {
             }).on("click", function(d) {
                 country = d.properties.name;
                 d3.select("#country_name").text(function() {
-                    return country;
+                    return country + " [# Fatalities]";
                 });
                 update1(country);
             });
@@ -452,7 +351,7 @@ function ready2(data, value, size, dom) {
             }).on("click", function(d) {
                 country = d.properties.name;
                 d3.select("#country_name").text(function() {
-                    return country;
+                    return country + " [# Recoveries]";
                 });
                 update1(country);
             });
