Removing extra space from top

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -131,10 +131,10 @@ text{
     <div class="container">
         <div class="jumbotron" style="padding-top: 10px;padding-bottom: 10px;">
             <h4 style="text-align: center;">Project for CSE 564: Visualization and Visual Analytics | INVESTIGATING COVID19</h4>
-            <marquee>    Created by: 
+            <!-- <marquee>    Created by: 
                 <a href="">Harshit </a> and
                 <a href="">Siva</a>
-            </marquee>
+            </marquee> -->
         </div>
         <!-- <div class="row">
             <p class="col-md-4">Project for CSE 564: Visualization and Visual Analytics</p>
